rust/errors_refactor3.txt
   Compiling speakeasy v3.0.0 (C:\Projects\github\speakeasy\rust)
error[E0432]: unresolved import `super::ApiHandler`
 --> src\winenv\api\usermode\kernel32.rs:3:5
  |
3 | use super::ApiHandler;
  |     ^^^^^^^^^^^^^^^^^ no `ApiHandler` in `winenv::api::usermode`

error[E0432]: unresolved import `super::ApiHandler`
 --> src\winenv\api\usermode\user32.rs:3:5
  |
3 | use super::ApiHandler;
  |     ^^^^^^^^^^^^^^^^^ no `ApiHandler` in `winenv::api::usermode`

error[E0432]: unresolved import `super::ApiHandler`
 --> src\winenv\api\usermode\ws2_32.rs:3:5
  |
3 | use super::ApiHandler;
  |     ^^^^^^^^^^^^^^^^^ no `ApiHandler` in `winenv::api::usermode`

error[E0432]: unresolved import `super::ApiHandler`
 --> src\winenv\api\kernelmode\ntoskrnl.rs:3:5
  |
3 | use super::ApiHandler;
  |     ^^^^^^^^^^^^^^^^^ no `ApiHandler` in `winenv::api::kernelmode`

error[E0432]: unresolved import `crate::error`
 --> src\windows\common.rs:3:12
  |
3 | use crate::error::{Result, SpeakeasyError};
  |            ^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `clap::error`

warning: unused import: `std::collections::HashMap`
 --> src\profiler.rs:4:5
  |
4 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0432`.
warning: `speakeasy` (lib) generated 1 warning
error: could not compile `speakeasy` (lib) due to 5 previous errors; 1 warning emitted
